Fix size and wrapping of expand/collapse

--- a/components/molecules/StackableExpandCollapse/StackableExpandCollapse.scss
+++ b/components/molecules/StackableExpandCollapse/StackableExpandCollapse.scss
@@ -25,7 +25,7 @@
   .uic--stackable-expand-collapse-clickable {
     @include source-sans-pro(1.6rem);
     align-items: baseline;
-    padding: 1.5rem 2rem;
+    padding: 1.4rem 2rem;
     color: $slate;
     background: $white;
     border: none;
@@ -33,6 +33,7 @@
   }
 
   .uic--stackable-expand-collapse-icon {
+    margin-left: 2rem;
     transition: transform $animation-duration;
   }
 
@@ -51,6 +52,6 @@
   }
 
   .uic--stackable-expand-collapse-contents-inner {
-    padding: 1rem 5rem 2rem 2rem;
+    padding: 0rem 5rem 2rem 2rem;
   }
 }
